# azure-openai-playground

./: .gitignore  README.md  pyproject.toml  secrets.yaml
playground/: langchain_example.py  quickstart.py
playground/langchain_examples/: agent-example.py  chains_example.py  langchain_example.py  quickstart_examples.py
playground/utils/: azure_openai.py  paths.py  secret.py
