[tool.poetry]
name = "azure-openai-playground"
version = "0.1.0"
description = "Playground for Azure openAI"
authors = ["aapman"]
readme = "README.md"
packages = [{include = "azure_openai_playground"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.133"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
